# MAS-Software-development-project

./: README.md  repository.debs  repository.rosinstall
atwork_ros_msgs/: CMakeLists.txt  README.md  package.xml
atwork_ros_msgs/msg/: AttentionMessage.msg  BenchmarkScenario.msg  BenchmarkState.msg  Inventory.msg  Item.msg  LocationIdentifier.msg  LoggingStatus.msg  NavigationTask.msg  ObjectIdentifier.msg  RobotStatus.msg  RobotStatusReport.msg  Task.msg  TaskInfo.msg  Transaction.msg  TransportationTask.msg  TriggeredConveyorBeltCommand.msg  TriggeredConveyorBeltStatus.msg
mcr_object_list_merger/: CMakeLists.txt  package.xml
mcr_perception_msgs/: CMakeLists.txt  package.xml
mcr_perception_msgs/msg/: Blob.msg  BlobList.msg  BoundingBox.msg  BoundingBoxList.msg  Cavity.msg  Face.msg  FaceList.msg  ImageList.msg  LaserScanSegment.msg  LaserScanSegmentList.msg  MatchingErrorStamped.msg  Object.msg  ObjectList.msg  Person.msg  PersonList.msg  PlanarPolygon.msg  Plane.msg  PointCloud2List.msg
mcr_perception_msgs/srv/: AccumulateTabletopCloud.srv  AnalyzeCloudColor.srv  BaseScanLinearRegression.srv  ClusterTabletopCloud.srv  FindWorkspace.srv  (+9 more)
mcr_scene_segmentation/: CMakeLists.txt  nodelet_plugins.xml  package.xml  setup.py
task_planning/mir_knowledge_base_analyzer/: CMakeLists.txt  README.md  package.xml  setup.py
task_planning/mir_knowledge_base_analyzer/common/src/mir_knowledge_base_analyzer/: my_generic_util_class.py
task_planning/mir_knowledge_base_analyzer/msg/: ObjectsAtLocation.msg
task_planning/mir_knowledge_base_analyzer/ros/doc/: README.md
task_planning/mir_knowledge_base_analyzer/ros/include/mir_knowledge_base_analyzer/: knowledge_base_queries.h
task_planning/mir_knowledge_base_analyzer/ros/launch/: knowledge_base_analyzer.launch  knowledge_base_queries.launch
task_planning/mir_knowledge_base_analyzer/ros/scripts/: knowledge_base_analyzer
task_planning/mir_knowledge_base_analyzer/ros/src/: knowledge_base_queries.cpp
task_planning/mir_knowledge_base_analyzer/ros/src/mir_knowledge_base_analyzer_ros/: knowledge_base_analyzer.py
task_planning/mir_knowledge_base_analyzer/ros/test/: my_test.py
task_planning/mir_plan_loader/: CMakeLists.txt  package.xml
task_planning/mir_plan_loader/ros/launch/: plan_loader.launch
task_planning/mir_plan_loader/ros/scripts/: plan_loader.py  plan_loader_test.py
task_planning/mir_plan_loader_msgs/: CMakeLists.txt  package.xml
task_planning/mir_plan_loader_msgs/ros/action/: LoadPlan.action
task_planning/mir_planner_executor/: CMakeLists.txt  package.xml
task_planning/mir_planner_executor/ros/include/mir_planner_executor/: knowledge_updater.h  planner_executor.h  to_be_removed_constants.h
task_planning/mir_planner_executor/ros/include/mir_planner_executor/actions/: executor_action.h  mockup_helper.h
task_planning/mir_planner_executor/ros/include/mir_planner_executor/actions/insert/: base_insert_action.h  combined_insert_action.h  insert_action.h  insert_cavity_action.h  mockup_insert_action.h
task_planning/mir_planner_executor/ros/include/mir_planner_executor/actions/move/: base_move_action.h  mockup_move_action.h  move_action.h
task_planning/mir_planner_executor/ros/include/mir_planner_executor/actions/perceive/: base_perceive_action.h  combined_perceive_action.h  mockup_perceive_action.h  perceive_action.h  perceive_cavity_action.h
task_planning/mir_planner_executor/ros/include/mir_planner_executor/actions/pick/: base_pick_action.h  mockup_pick_action.h  pick_wbc_action.h
task_planning/mir_planner_executor/ros/include/mir_planner_executor/actions/place/: base_place_action.h  mockup_place_action.h  place_action.h
task_planning/mir_planner_executor/ros/include/mir_planner_executor/actions/stage/: base_stage_action.h  mockup_stage_action.h  stage_action.h
task_planning/mir_planner_executor/ros/include/mir_planner_executor/actions/unstage/: base_unstage_action.h  mockup_unstage_action.h  unstage_action.h
task_planning/mir_planner_executor/ros/launch/: planner_executor.launch  planner_executor_test.launch
task_planning/mir_planner_executor/ros/scripts/: planner_executor.py  planner_executor_test.py
task_planning/mir_planner_executor/ros/src/: knowledge_updater.cpp  planner_executor.cpp
task_planning/mir_planner_executor/ros/src/actions/: executor_action.cpp  mockup_helper.cpp
task_planning/mir_planner_executor/ros/src/actions/insert/: base_insert_action.cpp  combined_insert_action.cpp  insert_action.cpp  insert_cavity_action.cpp  mockup_insert_action.cpp
task_planning/mir_planner_executor/ros/src/actions/move/: base_move_action.cpp  mockup_move_action.cpp  move_action.cpp
task_planning/mir_planner_executor/ros/src/actions/perceive/: base_perceive_action.cpp  combined_perceive_action.cpp  mockup_perceive_action.cpp  perceive_action.cpp  perceive_cavity_action.cpp
task_planning/mir_planner_executor/ros/src/actions/pick/: base_pick_action.cpp  mockup_pick_action.cpp  pick_wbc_action.cpp
task_planning/mir_planner_executor/ros/src/actions/place/: base_place_action.cpp  mockup_place_action.cpp  place_action.cpp
task_planning/mir_planner_executor/ros/src/actions/stage/: base_stage_action.cpp  mockup_stage_action.cpp  stage_action.cpp
task_planning/mir_planner_executor/ros/src/actions/unstage/: base_unstage_action.cpp  mockup_unstage_action.cpp  unstage_action.cpp
task_planning/mir_planner_executor_msgs/: CMakeLists.txt  package.xml
task_planning/mir_planner_executor_msgs/ros/action/: ExecutePlan.action
task_planning/mir_task_planner/: CMakeLists.txt  README.md  bmt.py  package.xml  ppt.py  refbox_communication.py  robot_behaviours.py  test.py  test_ppt.py
task_planning/mir_yb_actions/mir_align_with_workspace/: CMakeLists.txt  package.xml  setup.py
task_planning/mir_yb_actions/mir_align_with_workspace/ros/config/: dynamic_alignment.cfg
task_planning/mir_yb_actions/mir_align_with_workspace/ros/launch/: align_with_workspace.launch
task_planning/mir_yb_actions/mir_align_with_workspace/ros/scripts/: align_with_workspace_client_test.py  align_with_workspace_server.py
(+245 files in other folders)
