<?xml version="1.0"?>
<package>
  <name>mir_plan_loader_msgs</name>
  <version>1.0.0</version>
  <description>
    Plan loader messages
  </description>

  <license>GPLv3</license>

  <author email="torsten.jandt@smail.inf.h-brs.de">Torsten Jandt</author>
  <maintainer email="torsten.jandt@smail.inf.h-brs.de">Torsten Jandt</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rosplan_planning_system</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rosplan_knowledge_base</run_depend>
  <run_depend>rosplan_planning_system</run_depend>
</package>
